--- a/src/stylesheets/answered.css
+++ b/src/stylesheets/answered.css
@@ -5,6 +5,11 @@
     padding-right: 5px;
 }
 
+.answered-questions-container {
+    display: flex;
+    flex-wrap: wrap
+}
+
 .option-one-stats {
     color: #009999;
    
@@ -16,7 +21,7 @@
 }
 
 .option-stats-container {
-    width: 580px;
+    width: 90%;
     text-align: center;
     padding: 5px;
 }
@@ -28,8 +33,8 @@
     margin-top: 5rem;
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
-    padding: 20px;
+    padding: 1rem;
+    width: 90%;
     color: #663300;
     background-color: cornsilk;
     border: 1px solid bisque;
