--- a/src/stylesheets/homepage.css
+++ b/src/stylesheets/homepage.css
@@ -5,7 +5,7 @@
 
 .checkmark-explanation {
     text-shadow: 1px 1px 1px grey;
-    width: 450px;
+    width: 90%;
     margin: auto;
     border-bottom: 4px solid #66ff33;
     padding-bottom: 5px;
