--- a/src/stylesheets/leaderboard.css
+++ b/src/stylesheets/leaderboard.css
@@ -1,6 +1,7 @@
 
 
 .leaderboard-main h1{
+    margin: 20px;
     text-decoration-line: underline;
     color: #006666;
     text-shadow: 2px 2px 4px #33cccc;
@@ -16,14 +17,18 @@
 
 .user-stats-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 10px;
-    margin: 1rem;
+    margin-top: 1rem;
     border: 1px solid gray;
     border-radius: 10px;
     font-size: x-large;
 }
 
+.separator {
+    display: none
+}
 #first {
     color: #0033cc;
     box-shadow: 0px 0px 10px #0033cc inset;
