--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,3 +1,12 @@
+.app-main {
+    margin-top: 10px;
+}
+
+.loading-bar {
+    position: absolute;
+    top: 80px;
+    z-index: 10
+}
 
 .main {
     display: flex;
